--- a/ShapeGame/MainWindow.xaml
+++ b/ShapeGame/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:kt="clr-namespace:Microsoft.Samples.Kinect.WpfViewers;assembly=Microsoft.Samples.Kinect.WpfViewers"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Kinect Shape Game" FontStyle="Italic" SizeToContent="WidthAndHeight"
+        Title="으리오 웨어 키넥트" FontStyle="Italic" SizeToContent="WidthAndHeight"
         Loaded="WindowLoaded" Closed="WindowClosed" Closing="WindowClosing">
     <Grid>
         <StackPanel Orientation="Vertical" Background="#FF46BC44">
@@ -10,9 +10,9 @@
                 <Canvas Margin="0" Name="playfield" Height="688" Width="619" SizeChanged="PlayfieldSizeChanged">
                     <Canvas.Background>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="#D9040833" Offset="0.238" />
-                            <GradientStop Color="#FF46BC44" Offset="1" />
-                            <GradientStop Color="#E61747B2" Offset="0.811" />
+                            <GradientStop Color="#D9037f38" Offset="0.238" />
+                            <GradientStop Color="#FF01ad4c" Offset="1" />
+                            <GradientStop Color="#E64fdf7f" Offset="0.811" />
                         </LinearGradientBrush>
                     </Canvas.Background>
                     
